welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: not found: type int
var nbpas:int= 0
          ^Variables:3: error: not found: type int
var dejafait:int= 1
             ^